syntax = "proto3";

option csharp_namespace = "GrpcClientAPI";

service tienda{
    rpc CrearTienda(TiendaRequest) returns (CrudTiendaResponse){}
    rpc ModificarTienda(TiendaModificarRequest) returns (CrudTiendaResponse){}
    rpc EliminarTienda(TiendaId) returns (CrudTiendaResponse){}
    rpc TraerTiendas(FiltrosTienda) returns (getTiendas){}
    rpc Detalle(DetalleTiendaRequest) returns (DetalleTiendaResponse){}
    rpc AsignarProducto(ManejarProducto) returns (CrudTiendaResponse){}
    rpc DesasignarProducto(ManejarProducto) returns (CrudTiendaResponse){}
    rpc AsignarUsuario(ManejarUsuario) returns (CrudTiendaResponse){}
    rpc DesasignarUsuario(ManejarUsuario) returns (CrudTiendaResponse){}
    rpc ModificarStock(ModificarStockRequest) returns (CrudTiendaResponse){}
    rpc CrearOrdenCompra(OrdenCompraRequest) returns (CrudTiendaResponse){}
    rpc TraerOrdenCompra(UsuuarioId) returns (OrdenCompraResponse){}
    rpc DetalleOrdenCompra(IdOrdenCompra) returns (DetalleOrdenCompraResponse){}
    rpc RecibirPedido(OrdenCompraId) returns (CrudTiendaResponse){}
}

message TiendaId{
    int64 idTienda = 1;
}

message UsuuarioId{
    int64 idUsuario = 1;
}

message OrdenCompraId{
    int64 idOrdenCompra = 1;
}

message TiendaRequest{
    string codigo = 1;
    string direccion = 2;
    string provincia = 3;
    string ciudad = 4;
    bool habilitado = 5;
}

message TiendaModificarRequest{
    int64 idTienda = 1;
    string direccion = 2;
    string provincia = 3;
    string ciudad = 4;
    bool habilitado = 5;
}

message DetalleTiendaRequest{
    string codigo = 1;
}

message FiltrosTienda{
    string codigo = 1;
    bool habilitado = 2;
}

message ManejarProducto{
    int64 idTienda = 1;
    int64 idProducto = 2;
}

message ManejarUsuario{
    int64 idTienda = 1;
    int64 idUsuario = 2;
}

message ModificarStockRequest{
    string codigoTienda = 1;
    int64 idProducto = 2;
    int32 cantidad = 3;
}

message CrudTiendaResponse{
    bool estado = 1;
    string mensaje = 2;
}

message TiendaResponse{
    string codigo = 1;
    bool habilitado = 2;
}

message DetalleTiendaResponse{
    int64 idTienda = 1;
    string codigo = 2;
    string direccion = 3;
    string provincia = 4;
    string ciudad = 5;
    bool habilitado = 6;
}

message getTiendas{
    repeated TiendaResponse tiendas = 1;
}

message OrdenCompraRequest{
    int64 idUsuario = 1;
    repeated ItemResponse items = 2;
}

message ItemResponse{
    int64 idProducto = 1;
    int32 cantidad = 2;
}

message IdOrdenCompra{
    int64 idOrdenCompra = 1;
}

message DetalleItem{
    string nombre = 1;
    string talle = 2;
    string color = 3;
    string cantidad = 4;
}

message DetalleOrdenCompraResponse{
    repeated DetalleItem items = 1;
}

message OrdenCompras{
    int64 idOrdenCompra = 1;
    string fechaSolicitud = 2;
    string estado = 3;
    string observaciones = 4;
    string fechaRecepcion = 5;
}

message OrdenCompraResponse{
    repeated OrdenCompras ordenes = 1;
}