syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.server.grpc";

import "tienda.proto";
import "usuario.proto";

service producto{
     rpc CrearProducto(ProductoRequest) returns (CrudProductoResponse){}
     rpc ModificarProducto(ProductoModificarRequest) returns (CrudProductoResponse){}
     rpc EliminarProducto(ProductoId) returns (CrudProductoResponse){}
     rpc TraerProductos(FiltrosProducto) returns (getProductos){}
     rpc Detalle(DetalleProductoRequest) returns (DetalleProductoResponse){}
     rpc GetProductosNoAsociados(TiendaId) returns (getProductosNoAsociados){}
     rpc GetProductosAsociados(TiendaId) returns (getProductosAsociados){}
     rpc TraerNovedades(Empty) returns (getNovedades){}
}

message ProductoId{
    int64 idProducto = 1;
}

message ProductoRequest{
    string nombre = 1;
    string imagen = 2;
    string talle = 3;
    string color = 4;
    bool habilitado = 5;
}

message ProductoModificarRequest{
    int64 idProducto = 1;
    string nombre = 2;
    string imagen = 3;
    string talle = 4;
    string color = 5;
    bool habilitado = 6;
}

message DetalleProductoRequest{
    string codigoTienda = 1;
    string codigoProducto = 2;
}

message FiltrosProducto{
    int64 idUsuario = 1;
    string nombre = 2;
    string codigo = 3;
    string talle = 4;
    string color = 5;
}

message ProductoResponse{
    string nombre = 1;
    string codigo = 2;
    TiendaResponse tienda = 3;
    string talle = 4;
    string color = 5;
}

message ProductoResponse2{
    string nombre = 1;
    string codigo = 2;
    string talle = 3;
    string color = 4;
    int64 idProducto = 5;
}

message CrudProductoResponse{
    bool estado = 1;
    string mensaje = 2;
}

message DetalleProductoResponse{
    int64 idProducto = 1;
    string nombre = 2;
    string imagen = 3;
    string talle = 4;
    string color = 5;
    bool habilitado = 6;
    repeated StockResponse stock = 7;
}

message StockResponse{
    TiendaResponse tienda = 1;
    int32 cantidad = 2;
}

message getProductos{
    repeated ProductoResponse productos = 1;
}

message getProductosNoAsociados{
    repeated ProductoResponse2 productos = 1;
}
message getProductosAsociados{
    repeated ProductoResponse2 productos = 1;
}

message ProductoNovedades{
    string codigo = 1;
    string nombre = 2;
    string url = 3;
    repeated Disponibilidad disponibilidad = 4;
}

message Disponibilidad{
    string talle = 1;
    string color = 2;
}

message getNovedades{
    repeated ProductoNovedades novedades = 1;
}